demo code/VB/DLBT.bas

Attribute VB_Name = "DLBT"
' =======================================================================================
'                  点量BT（DLBT）－－ 致力于最专业的BT内核DLL库
'                                   节省您的开发时间
'
'   Copyright:  Copyright (c) 点量软件有限公司
'   版权所有：  点量软件有限公司 (QQ:52401692   <support at dolit.cn>)
'
'               如果您是个人作为非商业目的使用，您可以自由、免费的使用点量BT内核库和演示程序，
'               也期待收到您反馈的意见和建议，共同改进点量BT
'               如果您是商业使用，那么您需要联系作者申请产品的商业授权。
'               点量BT内核库所有演示程序的代码对外公开，内核库的代码只限付费用户个人使用。
'
'   官方网站：  http://www.dolit.cn      http://blog.dolit.cn
'
'   本VB示例的一些注释,建议对照文档和VC版的DLBT.h中的注释
'
' =======================================================================================


'声明一下UINT64，在VB中没有这个类型
Type UINT64
    LowLong As Long
    HighLong As Long
End Type


' ***************************  以下是内核整体相关的接口 ********************************

' 内核启动时的基本参数（是否启动DHT以及启动端口等）
Type DLBT_KERNEL_START_PARAM
    bStartLocalDiscovery    As Long             ' 1代表是，0代表否。是否启动局域网内的自动发现（不通过DHT、Tracker，只要在一个局域网也能立即发现，局域网速度快，可以加速优先发现同一个局域网的人）
    bStartUPnP              As Long             ' 1代表是，0代表否。是否自动UPnP映射点量BT内核所需的端口
    bStartDHT               As Long             ' 1代表是，0代表否。是否启动DHT，如果默认不启动，可以后面调用接口来启动
    bLanUser                As Long             ' 1代表是，0代表否。是否纯局域网用户（不希望用户进行外网连接和外网通讯，纯局域网下载模式---不占用外网带宽，只通过内网的用户间下载）
    bVODMode                As Long             ' 1代表是，0代表否。设置内核的下载模式是否严格的VOD模式，严格的VOD模式下载时，一个文件的分块是严格按比较顺序的方式下载，从前向后下载；或者从中间某处拖动的位置向后下载
                                                ' 该模式比较适合边下载边播放,针对这个模式做了很多优化。但由于不是随机下载，所以不大适合纯下载的方案，只建议在边下载边播放时使用。默认是普通模式下载
                                                ' 仅VOD以上版本中有效
    startPort               As Integer             ' 内核监听的端口，如果startPort和endPort均为0 或者startPort > endPort || endPort > 32765 这种参数非法，则内核随机监听一个端口。 如果startPort和endPort合法
    endPort                 As Integer             ' 内核则自动从startPort ---- endPort之间监听一个可用的端口。这个端口可以从DLBT_GetListenPort获得
End Type


' =======================================================================================
'   内核的启动和关闭函数，商业授权版才有私有协议功能，演示版只能用标准BT方式
' =======================================================================================
Declare Function DLBT_Startup Lib "DLBT.dll" (ByRef param As DLBT_KERNEL_START_PARAM, ByVal protocol As String, ByVal bSeedServerMode As Boolean, ByVal productNum As String) As Long

' 获得内核监听的端口
Declare Function DLBT_GetListenPort Lib "DLBT.dll" () As Integer

' 最后关闭点量BT内核
Declare Function DLBT_Shutdown Lib "DLBT.dll" () As Long

' 由于关闭的速度可能会比较慢(需要通知Tracker Stop), 所以可以调用该函数提前通知,提高下线速度
' 然后最后在程序最后退出时调用DLBT_Shutdown等待真正的结束
Declare Sub DLBT_PreShutdown Lib "DLBT.dll" ()


' =======================================================================================
'   内核的上传下载速度、最大连接用户数的设置
' =======================================================================================
' 速度限制，单位是字节(BYTE)，如果需要限速1M，请输入 1024*1024
Declare Sub DLBT_SetDownloadSpeedLimit Lib "DLBT.dll" (ByVal limit As Long)
Declare Sub DLBT_SetUploadSpeedLimit Lib "DLBT.dll" (ByVal limit As Long)
Declare Sub DLBT_SetMaxUploadConnection Lib "DLBT.dll" (ByVal limit As Long)
Declare Sub DLBT_SetMaxTotalConnection Lib "DLBT.dll" (ByVal limit As Long)

' 最多发起的半开连接数（很多连接可能是发起了，但还没连上）
Declare Sub DLBT_SetMaxHalfOpenConnection Lib "DLBT.dll" (ByVal limit As Long)

' 用于设置是否对跟自己在同一个局域网的用户限速，limit如果为true，则使用后面参数中的限速数值进行限速，否则不限。默认不对同一个局域网下的用户应用限速。
Declare Sub DLBT_SetLocalNetworkLimit Lib "DLBT.dll" ( _
                ByVal bLimit As Boolean, _
                ByVal downSpeedLimit As Long, _
                ByVal uploadSpeedLimit As Long)

' 设置文件扫描校验时的休息参数，circleCount代表循环多少次做一次休息。默认是0（也就是不休息） sleepMs代表休息多久，默认是1ms
Declare Sub DLBT_SetFileScanDelay Lib "DLBT.dll" (ByVal circleCount As Long, ByVal sleepMs As Long)

' 设置文件下载完成后，是否修改为原始修改时间（制作种子时每个文件的修改时间状态）。调用该函数后，制作的torrent中会包含有每个文件此时的修改时间信息
' 用户在下载时，发现有这个信息，并且调用了该函数后，则会在每个文件完成时，自动将文件的修改时间设置为torrent种子中记录的时间
' 如果只是下载的机器上启用了该函数，但制作种子的机器上没有使用该函数（种子中没有每个文件的时间信息），则也无法进行时间修改
Declare Sub DLBT_UseServerModifyTime Lib "DLBT.dll" (ByVal bUseServerTime As Boolean)

' 是否启用UDP穿透传输功能，默认是自动适应，如果对方支持，在tcp无法到达时，自动切换为udp通讯
Declare Sub DLBT_EnableUDPTransfer Lib "DLBT.dll" (ByVal bEnabled As Boolean)

' 是否启用伪装Http传输，某些地区（比如马来西亚、巴西的一些网络）对Http不限速，但对P2P限速在20K左右，这种网络环境下，可以启用Http传输
'  默认是允许伪装Http的传输进入（可以接受他们的通讯），但自己发起的连接不主动伪装。 如果客户群中有这类用户，可以考虑都设置：主动伪装。
' 但这种伪装也有副作用，国内有些地区机房（一般是网通）设置了Http必须使用域名，而不能使用IP，而BT传输中，对方没有合法域名，反而会被这种限制截杀
' 如果有这种限制，反而主动伪装后会没有速度。所以请根据实际使用选择。
Declare Sub DLBT_SetP2PTransferAsHttp Lib "DLBT.dll" (ByVal bHttpOut As Boolean, ByVal bAllowedIn As Boolean)

' 是否使用单独的穿透服务器，如果不使用单独服务器，穿透的协助将由某个双方都能连上的第三方p2p节点辅助完成
Declare Function DLBT_AddHoleServer Lib "DLBT.dll" (ByVal ip As String, ByVal port As Integer) As Long

' 设置服务器的IP，可以多次调用设置多个，用于标记哪些IP是服务器，以便统计从服务器下载到的数据等信息，甚至速度到了一定程度可以断开服务器连接，节省服务器带宽
Declare Sub DLBT_AddServerIP Lib "DLBT.dll" (ByVal ip As String)
' 不去连接这个p2sp的url，可以重复调用. 目的是，如果是服务器上，这个p2sp的url就在本机，就没必要去连接这个url了
Declare Sub DLBT_AddBanServerUrl Lib "DLBT.dll" (ByVal url As String)

' 保存一次状态文件的条件，内部默认全部下载完成后保存一次。可以调整为自己需要的时间或者上限数目，比如每5分钟保存一次，或者下载100块数据后保存一次
Declare Function DLBT_SetStatusFileSavePeriod Lib "DLBT.dll" ( _
    ByVal iPeriod As Long, _
    ByVal iPieceCount As Long) As Long


'//=======================================================================================
'//  设置报告Tracker的本机IP，内网下载和供种时设置自己NAT的公网IP会比较有效，详细参考
'//  点量BT的使用说明文档
'//=======================================================================================
Declare Sub DLBT_SetReportIP Lib "DLBT.dll" (ByVal reportIP As String)

Declare Function DLBT_GetReportIP Lib "DLBT.dll" () As Long
'DLBT_API void WINAPI DLBT_SetUserAgent (LPCSTR agent);

'//=======================================================================================
'//  设置磁盘缓存，3.3版本后已对外开放，3.3版本后系统内部自动设置8M缓存，如需调整可使用该
'//  函数进行调整，单位是K，比如要设置1M的缓存，需要传入1024
'//=======================================================================================
Declare Sub DLBT_SetMaxCacheSize Lib "DLBT.dll" (ByVal size As Long)

' 一些性能参数设置，默认情况下，点量BT是为了普通网络环境下的上传和下载所用，如果是在千M局域网下
' 并且磁盘性能良好，想获得50M/s甚至100M/s的单个文件传输速度，则需要设置这些参数。或者想节约内存，也可以设置这些参数
' 具体参数的设置建议，请咨询点量软件获取
Declare Sub DLBT_SetPerformanceFactor Lib "DLBT.dll" ( _
    ByVal socketRecvBufferSize As Long, _
    ByVal socketSendBufferSize As Long, _
    ByVal maxRecvDiskQueueSize As Long, _
    ByVal maxSendDiskQueueSize As Long)


' =======================================================================================
'   DHT相关函数,port是DHT监听的端口（udp端口），如果为0则使用内核监听的TCP端口号监听
' =======================================================================================
Declare Sub DLBT_DHT_Start Lib "DLBT.dll" (ByVal port As Integer)
Declare Sub DLBT_DHT_Stop Lib "DLBT.dll" ()
Declare Function DLBT_DHT_IsStarted Lib "DLBT.dll" () As Boolean


'' 暂时没有翻译代理相关的函数
''//=======================================================================================
''//  设置代理相关函数,商业授权版才有此功能，演示版暂不提供
''//=======================================================================================
''
''struct DLBT_PROXY_SETTING
''{
''    char    proxyHost [256];    // 代理服务器地址
''    int     nPort;              // 代理服务器的端口
''    char    proxyUser [256];    // 如果是需要验证的代理,输入用户名
''    char    proxyPass [256];    // 如果是需要验证的代理,输入密码
''
''    Enum DLBT_PROXY_TYPE
''    {
''        DLBT_PROXY_NONE,            // 不使用代理
''        DLBT_PROXY_SOCKS4,          // 使用SOCKS4代理，需要用户名
''        DLBT_PROXY_SOCKS5,          // 使用SOCKS5代理，无需用户名和密码
''        DLBT_PROXY_SOCKS5A,         // 使用需要密码验证的SOCKS5代理，需要用户名和密码
''        DLBT_PROXY_HTTP,            // 使用HTTP代理，匿名访问，仅适用于标准的HTTP访问，Tracker和Http跨协议传输，下载则不可以
''        DLBT_PROXY_HTTPA            // 使用需要密码验证的HTTP代理
''    };
''
''    DLBT_PROXY_TYPE proxyType;      // 指定代理的类型
''};
''
''
''//=======================================================================================
''//  标识代理将应用于哪些连接（Tracker、下载、DHT和http跨协议下载等）
''//=======================================================================================
''#define DLBT_PROXY_TO_TRACKER       1  // 仅对连接Tracker使用代理
''#define DLBT_PROXY_TO_DOWNLOAD      2  // 仅对下载时同用户（Peer）交流使用代理
''#define DLBT_PROXY_TO_DHT           4  // 仅对DHT通讯使用代理，DHT使用udp通讯，需要代理是支持udp的
''#define DLBT_PROXY_TO_HTTP_DOWNLOAD 8  // 仅对HTTP下载使用代理，当任务有http跨协议下载时有效（不包括Tracker）
''
''// 对所有均使用代理
''#define DLBT_PROXY_TO_ALL   (DLBT_PROXY_TO_TRACKER | DLBT_PROXY_TO_DOWNLOAD | DLBT_PROXY_TO_DHT | DLBT_PROXY_TO_HTTP_DOWNLOAD)
''
''DLBT_API void WINAPI DLBT_SetProxy (
''    DLBT_PROXY_SETTING  proxySetting,   // 代理设置，包括IP端口等
''    int                 proxyTo         // 代理应用于哪些连接，就是上面宏定义的几种类型，比如DLBT_PROXY_TO_ALL
''    );
''
''//=======================================================================================
''//  获取代理的设置，proxyTo标识想获得哪一类连接的代理信息，但proxyTo只能单个获取某类连接
''//  的代理设置，不能使用DLBT_PROXY_TO_ALL这种多个混合选择
''//=======================================================================================
''DLBT_API void WINAPI DLBT_GetProxySetting (DLBT_PROXY_SETTING * proxySetting, int proxyTo);
''
''//=======================================================================================
''//  设置加密相关函数,将协议字符串或者所有数据均加密，实现保密传输，在兼容BT协议上突破
''//  绝大部分运营商的封锁。和前面提到的私有协议不同的是，私有协议后将形成自己
''//  的P2P网络，不能同其它BT客户端兼容；但私有协议完全不是BT协议了，没有BT的痕迹，可以穿透
''//  更多运营商的封锁
''//=======================================================================================
Public Enum DLBT_ENCRYPT_OPTION
    DLBT_ENCRYPT_NONE = 0             ' // 不支持任何加密的数据，遇到加密的通讯则断开
    DLBT_ENCRYPT_COMPATIBLE = 1       ' // 兼容模式：自己发起的连接不使用加密，但允许别人的加密连接进入，遇到加密的则同对方用加密模式会话；
    DLBT_ENCRYPT_FULL = 2             ' // 完整加密：自己发起的连接默认使用加密，同时允许普通和加密的连接连入。遇到加密则用加密模式会话；遇到非加密则用明文模式会话。默认是完整加密
    DLBT_ENCRYPT_FORCED = 3           ' // 强制加密，仅支持加密通讯，不接受普通连接，遇到不加密的则断开
End Enum
''
'加密级别. 加密层级高，理论上会浪费一点CPU，但数据传输安全和突破封锁的能力会有提升
Public Enum DLBT_ENCRYPT_LEVEL
    DLBT_ENCRYPT_PROTOCOL = 0         ' // 仅加密BT的通讯握手协议  －－一般用于防止运营商的阻止
    DLBT_ENCRYPT_DATA = 1             ' // 仅加密数据流（数据内容）－－ 用于保密性强的文件传输
    DLBT_ENCRYPT_PROTOCOL_MIX = 2     ' // 主动发起的连接使用加密协议模式，但如果对方使用了数据加密，也支持同他使用数据加密模式通讯
    DLBT_ENCRYPT_ALL = 3              ' // 协议和数据均主动加密
End Enum
''// 内部默认使用兼容性加密（对协议和数据均兼容加密），没有特殊需求，建议不需要调用
Declare Sub DLBT_SetEncryptSetting Lib "DLBT.dll" (ByVal encryptOption As DLBT_ENCRYPT_OPTION, ByVal encryptLevel As DLBT_ENCRYPT_LEVEL)


' ***************************  以下是单个下载相关的接口 ********************************

' 单个下载的状态
Public Enum DLBT_DOWNLOAD_STATE
    BTDS_QUEUED = 0                    ' 已添加
    BTDS_CHECKING_FILES = 1            ' 正在检查校验文件
    BTDS_DOWNLOADING_TORRENT = 2       ' 无种子模式下，正在获取种子的信息
    BTDS_DOWNLOADING = 3               ' 正在下载中
    BTDS_PAUSED = 4                    ' 暂停
    BTDS_FINISHED = 5                ' 指定的文件下载完成
    BTDS_SEEDING = 6                   ' 供种中（种子中的所有文件下载完成）
    BTDS_ALLOCATING = 7                ' 正在预分配磁盘空间 -- 预分配空间，减少磁盘碎片，和
                                    ' 启动选项有关，启动时如果选择预分配磁盘方式，可能进入该状态
    BTDS_ERROR = 8                  ' 出错，可能是写磁盘出错等原因，详细原因可以通过调用DLBT_Downloader_GetLastError获知
End Enum

' 文件的分配模式,详见使用说明文档
Public Enum DLBT_FILE_ALLOCATE_TYPE
    FILE_ALLOCATE_REVERSED = 0    ' 预分配模式,预先创建文件,下载每一块后放到正确的位置
    FILE_ALLOCATE_SPARSE = 1      ' Default mode, more effient and less disk space.NTFS下有效 http://msdn.microsoft.com/en-us/library/aa365564(VS.85).aspx
    FILE_ALLOCATE_COMPACT = 2     ' 文件大小随着下载不断增长,每下载一块数据按次序紧密排在一起,但不是他们的最终位置,下载中不断调整位置,最后文件位置方能确定         .
End Enum


' =======================================================================================
'   启动一个文件的下载，返回这个下载的句柄，以后对该下载任务的所有操作，需要根据句柄来进行
' =======================================================================================
